# ClxStd

./: CMakeLists.txt
Testai/: CMakeLists.txt  t001_Logger.cpp
src/: CMakeLists.txt
src/Logger/: ClxStd_Logger.cpp  ClxStd_Logger.h
